[package]
name = "rustpat"
version = "0.5.0-alpha.1"
description = "rustpat is a Rust library that makes playing audio simple."
authors = ["Thomas Newman <tnewman@users.noreply.github.com>"]
repository = "https://github.com/tnewman/pat"
readme = "README.md"
license = "LGPL-2.1-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
